2002-01-09  Michael Meeks  <michael@ximian.com>

	* Version 0.7.2

2002-01-03  Mark McLoughlin  <mark@skynet.ie>

	* lexer.l: lame workaround for FreeBSD bug.

2001-10-16  Ross Golder  <rossg@durban.golder.org>

	* libIDL.spec.in: Updated filenames/paths for libIDL2.

2001-10-05  Abel Cheung  <maddog@linux.org.hk>

	* libIDL-config.in: Fix output of --version and --cflags.

2001-09-26  Mark McLoughlin <mark@skynet.ie>

	* configure.in: add --enable-compile-warnings option.

	* Makefile.am: use WARN_CFLAGS.

2001-09-25  Mark McLoughlin <mark@skynet.ie>

	* Version 0.7.1.

2001-09-24  Mark McLoughlin <mark@skynet.ie>

	* configure.in: cleanup libtool versioning. Add
	ACLOCAL_FLAGS caching. Use pkg-config to check for
	libs.

	* libIDL-2.0.pc.in, libIDL.spec.in, Makefile.am, 
	  Makefile.msc.in, util.c: update.

	* IDL.h.new.in (LIBIDL_VERSION): rename to 
	LIBIDL_GEN_VERSION.

2001-09-21  Mark McLoughlin <mark@skynet.ie>

	* lexer.l (cpp_other): implement catch-all rule to get
	any cpp directives not caught by new cpp_status.

2001-09-21  Mark McLoughlin <mark@skynet.ie>

	* lexer.l (cpp_status): reimplement to take into account
	differences with variouts compilers.

	* lexer.l, parser.y: use g_ascii_ispace instead of isspace.

	* configure.in: require glib-1.3.7 for g_ascii_ispace.

2001-09-20  Mark McLoughlin <mark@skynet.ie>

	* .cvsignore: s/libIDL-config/libIDL-config-2/ and
	s/libIDL.info/libIDL2.info/.

2001-09-11  Havoc Pennington  <hp@redhat.com>

	* Makefile.am (libIDLincludedir): move headers to a versioned
	subdir, and nuke libIDLConf.sh. rename libIDL-config to
	libIDL-config-2

	* libIDL-2.0.pc.in (Cflags): change -Iincludedir to
	-Iincludedir/libIDL-2.0

2001-09-19  Mark McLoughlin <mark@skynet.ie>

	Fixes Bugs #60728 and 58458

	* lexer.l: merged patches from Raja R Harinath and 
	Takayuki Tamura.

2001-09-03  Mark McLoughlin <mark@skynet.ie>

	Fixes Bug #59824: the time to parse a union seemed to grow 
			  exponentially with the number of cases.
